# maestro

./: .gitignore  CLAUDE.md  DESIGN.md  INTERVIEW_PREP.md  README.md  pyproject.toml
benchmark/scripts/: README.md  curate.py  inspect_swebench.py  pr_shortlist.json.example  swebench_adapter.py
benchmark/tasks/: MANIFEST.md
benchmark/tasks/mwaskom__seaborn-3190/: task.json
benchmark/tasks/psf__requests-2317/: task.json
benchmark/tasks/pytest-dev__pytest-11143/: task.json
specs/: 01-data-models.md  02-llm-client.md  03-planner.md  04-scheduler.md  05-subagent.md  06-verifier.md  07-sandbox.md  08-cli.md  09-benchmark.md  10-experiments.md  11-prompt-evolution.md
src/maestro/: __init__.py  cli.py  models.py  orchestrator.py
src/maestro/benchmark/: __init__.py  build_tasks.py  configs.py  evaluator.py  harness.py  models.py
src/maestro/benchmark/analysis/: __init__.py  analyze.py
src/maestro/llm/: __init__.py  client.py  config.py  errors.py
src/maestro/planner/: __init__.py  planner.py  prompts.py  repo_scanner.py
src/maestro/sandbox/: __init__.py  workspace.py
src/maestro/scheduler/: __init__.py  dag.py  scheduler.py
src/maestro/subagent/: __init__.py  prompts.py  subagent.py
src/maestro/utils/: logging.py  priority_queue.py  time.py
src/maestro/verifier/: __init__.py  deterministic.py  llm_judge.py  orchestrator.py  test_based.py
tests/fixtures/bench_tiny/task-001/: task.json
tests/fixtures/bench_tiny/task-001/before/src/: app.py
tests/fixtures/bench_tiny/task-001/before/tests/: test_app.py
tests/fixtures/tiny_flask_app/: README.md  pyproject.toml
tests/fixtures/tiny_flask_app/src/: app.py  db.py
tests/fixtures/tiny_flask_app/src/models/: user.py
tests/unit/: test_bench_analysis.py  test_bench_configs.py  test_bench_evaluator.py  test_bench_harness.py  test_cli.py  test_dag.py  test_deterministic.py  test_llm_client.py  test_llm_config.py  test_llm_judge.py  test_logging.py  test_models.py  test_orchestrator.py  test_planner.py  test_priority_queue.py  test_repo_scanner.py  test_scheduler.py  test_subagent.py  test_test_based.py  test_verifier_orchestrator.py  test_workspace.py
