[project]
name = "maestro"
version = "0.1.0"
description = "Parallelized coding agent framework with layered verification."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "Zhong Haitian", email = "ishaitian@gmail.com" }]
dependencies = [
    "openai>=1.40.0",
    "pydantic>=2.7.0",
    "langgraph>=0.2.0",
    "typer>=0.12.0",
    "rich>=13.7.0",
    "structlog>=24.1.0",
    "unidiff>=0.7.5",
    "aiofiles>=23.2.0",
    "pyyaml>=6.0.1",
    "tiktoken>=0.7.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.2.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=5.0.0",
    "ruff>=0.5.0",
    "mypy>=1.10.0",
    "types-pyyaml>=6.0.12",
    "types-aiofiles>=23.2.0",
]

[project.scripts]
maestro = "maestro.cli:app"

[build-system]
requires = ["hatchling>=1.24.0"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/maestro"]

[tool.ruff]
line-length = 100
target-version = "py311"
src = ["src", "tests"]
extend-exclude = [".venv", "build", "dist", "benchmark/tasks"]

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "B",   # flake8-bugbear
    "UP",  # pyupgrade
    "N",   # pep8-naming
    "SIM", # flake8-simplify
    "RUF", # ruff-specific
]
ignore = [
    "E501", # line too long (handled by formatter)
    "B008", # function calls in defaults (typer uses this)
]

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["N802"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.mypy]
python_version = "3.11"
strict = true
warn_unused_ignores = true
warn_redundant_casts = true
warn_unreachable = true
disallow_untyped_defs = true
check_untyped_defs = true
no_implicit_optional = true
show_error_codes = true
files = ["src/maestro"]

[[tool.mypy.overrides]]
module = ["benchmark.*", "tests.*"]
ignore_errors = true

[[tool.mypy.overrides]]
module = ["unidiff.*", "tiktoken.*"]
ignore_missing_imports = true

[tool.pytest.ini_options]
minversion = "8.0"
testpaths = ["tests"]
asyncio_mode = "auto"
addopts = [
    "-ra",
    "--strict-markers",
    "--strict-config",
]
markers = [
    "live: requires MAESTRO_LIVE_TEST=1 and real API keys",
    "slow: slower than ~1s",
]

[tool.coverage.run]
source = ["src/maestro"]
branch = true

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "if TYPE_CHECKING:",
    "raise NotImplementedError",
    "\\.\\.\\.",
]
